# ot-stc

./: .env.example  CLAUDE.md  PROJECT_PLAN.md  README.md  gitignore.txt  pyproject.toml  requirements.txt
config/: experiment.yaml  robot.yaml
docs/findings/: R4_alignment.md
scripts/: 01_inspect_alignment.py  01_record_demos.sh
src/ot_stc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ot_stc/io/: dataset.py
tests/: test_dataset.py
