[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-stc"
version = "0.1.0"
description = "Optimal Transport Stratified Curation of teleoperation demonstrations for the SO101 arm"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "POT>=0.9.4", "umap-learn>=0.5.6", "scikit-learn>=1.4",
    "numpy>=1.26,<2.2", "scipy>=1.11", "pandas>=2.1", "pyarrow>=15.0",
    "matplotlib>=3.8", "seaborn>=0.13", "pyyaml>=6.0",
    "python-dotenv>=1.0", "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "ipykernel>=6.29"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "network: test requires downloading from the HF Hub (skipped if offline)",
]
